Correcciones y mejoras menores